[package]
name          = "rrpc"
version       = "0.1.0"
license       = "MIT"
authors       = ["danc <dangcheng@hotmail.com>"]
edition       = "2018"
description   = "rrpc"
documentation = "https://docs.rs/rrpc"
homepage      = "https://github.com/danclive/rrpc"
repository    = "https://github.com/danclive/rrpc"
readme        = "README.md"
keywords      = ["rrpc"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
